--- a/pom.xml
+++ b/pom.xml
@@ -5,32 +5,17 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>de.mm</groupId>
-    <artifactId>ldbc-to-gradoop</artifactId>
+    <artifactId>gradoop-playground</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <project.build.targetJdk>1.8</project.build.targetJdk>
 
         <dep.gradoop.version>0.5.1</dep.gradoop.version>
         <dep.flink.version>1.7.2</dep.flink.version>
     </properties>
-
-    <repositories>
-        <repository>
-            <id>dbleipzig</id>
-            <name>Database Group Leipzig University</name>
-            <url>https://wdiserv1.informatik.uni-leipzig.de:443/archiva/repository/dbleipzig/</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-        </repository>
-    </repositories>
 
     <dependencies>
 
