--- a/pom.xml
+++ b/pom.xml
@@ -37,14 +37,14 @@
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-java</artifactId>
             <version>${dep.flink.version}</version>
-<!--            <scope>provided</scope>-->
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
             <groupId>org.apache.flink</groupId>
             <artifactId>flink-clients_2.11</artifactId>
             <version>${dep.flink.version}</version>
-<!--            <scope>provided</scope>-->
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
@@ -58,6 +58,7 @@
             <groupId>org.s1ck</groupId>
             <artifactId>ldbc-flink-import</artifactId>
             <version>0.3</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
