--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
 
         <dep.gradoop.version>0.5.1</dep.gradoop.version>
-        <dep.flink.version>1.7.2</dep.flink.version>
+        <dep.flink.version>1.9.2</dep.flink.version>
     </properties>
 
     <dependencies>
@@ -81,7 +81,7 @@
                         <manifest>
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>lib/</classpathPrefix>
-                            <mainClass>de.mm.gradoop.ldbc.LDBCToGradoopConverter</mainClass>
+                            <mainClass>de.mm.gradoop.operators.SubgraphComparison</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
