--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,8 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
 
-        <dep.gradoop.version>0.5.1</dep.gradoop.version>
-        <dep.flink.version>1.7.2</dep.flink.version>
+        <dep.gradoop.version>0.6.0</dep.gradoop.version>
+        <dep.flink.version>1.9.3</dep.flink.version>
     </properties>
 
     <dependencies>
@@ -57,8 +57,7 @@
         <dependency>
             <groupId>org.s1ck</groupId>
             <artifactId>ldbc-flink-import</artifactId>
-            <version>0.3</version>
-            <scope>provided</scope>
+            <version>0.4</version>
         </dependency>
 
         <dependency>
@@ -67,6 +66,12 @@
             <version>1.1.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-client</artifactId>
+            <version>2.7.3</version>
+	    <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -114,6 +119,27 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+        <!-- NOTE: We don't need a groupId specification because the group is
+             org.apache.maven.plugins ...which is assumed by default.
+         -->
+        <artifactId>maven-assembly-plugin</artifactId>
+        <version>3.3.0</version>
+        <configuration>
+          <descriptorRefs>
+            <descriptorRef>jar-with-dependencies</descriptorRef>
+          </descriptorRefs>
+        </configuration>
+        <executions>
+          <execution>
+            <id>make-assembly</id> <!-- this is used for inheritance merges -->
+            <phase>package</phase> <!-- bind to the packaging phase -->
+            <goals>
+              <goal>single</goal>
+            </goals>
+          </execution>
+        </executions>
+        </plugin>
         </plugins>
     </build>
 
